Update wording from Home Edition
Signed-off-by: Alex Ellis (OpenFaaS Ltd) <alexellis2@gmail.com>

--- a/posts/2025-12-15-slicer-2025-wrapup.md
+++ b/posts/2025-12-15-slicer-2025-wrapup.md
@@ -95,7 +95,7 @@ The public release in October opened up the tool to new use-cases and personas l
 
 ## What Slicer Test Pilots are saying
 
-A brave and curious group of individuals from managers, to VPs, to hackers took out a subscription for Slicer Home Edition to kick the tires and see what it could do. From the feedback we've seen so far, they were not disappointed.
+A brave and curious group of individuals from managers, to VPs, to hackers took out a subscription for Slicer to kick the tires and see what it could do. From the feedback we've seen so far, they were not disappointed.
 
 ### Alex P
 
@@ -152,7 +152,7 @@ Han adding ZFS snapshot support for instant cloning of VM images.
 
 Slicer's first cohort of users have received a limited edition Slicer Test Pilot mug, and have given us some great feedback via the Discord Server.
 
-If you'd like to try out Slicer, you can do so via the [Slicer website](https://slicervm.com/) either with the Home Edition for your own learning and exploration, or for work with the commercial edition.
+If you'd like to try out Slicer, you can do so via the [Slicer website](https://slicervm.com/) with the Individual tier for personal and commercial use, or Team/Platform for your team.
 
 We're just scratching the surface of what you can do with Slicer, but the best way to think about it is as:
 
